Add database login with controller service dao layers
